--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,254 @@
-.App {
-  text-align: center;
+body ,html{
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.logo img {
+  width: 270px;
+  margin-top: 30px;
+  margin-bottom: -90px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logoinfo {
+  width: 50%;
+  margin-left: 10%;
+  padding: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logoinfo h1 span {
+  color: green;
+}
+
+.logoinfo h1 {
+  margin-top: 0;
+}
+
+.logoinfo p {
+  color: rgb(63, 62, 62);
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.flexlogo {
   display: flex;
-  flex-direction: column;
+  gap: 20px;
+}
+
+.yourd {
+  width: 50%;
+  display: flex;
+}
+
+.yourd img {
+  width: 330px;
+  margin-left: 50px;
+  margin-top: -20px;
+}
+
+.yourd .here {
+  width: 230px;
+  margin-left: 0px;
+  margin-bottom: 190px;
+}
+
+.people {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.people img {
+  border-radius: 50%;
+  width: 100%;
+}
+
+.happy {
+  display: flex;
+  margin-left: 60px;
   align-items: center;
+}
+
+.star {
+  margin-left: 20px;
+}
+
+.starcon {
+  color: rgb(63, 62, 62);
+  font-weight: 500;
+}
+
+.tick span {
+  color: rgb(63, 62, 62);
+  font-weight: 500;
+}
+
+.tick {
+  padding-bottom: 10px;
+}
+
+.tick img {
+  width: 20px;
+  margin-bottom: -5px;
+  margin-right: 10px;
+}
+
+.tick {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.reviewsec {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.pimg img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.pimg {
+  display: flex;
+  align-items: center;
+}
+
+.reviewsec h1 span {
+  color: green;
+}
+
+.pimg p span {
+  background-color: rgb(210, 210, 33);
+}
+
+.buying {
+  width: 90%;
+  margin: 20px auto;
+}
+
+.want {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.want img {
+  width: 30%;
+  height: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.want .mygod {
+  height: 450px;
+}
+
+.buying span {
+  color: green;
+}
+
+.products {
+  width: 90%;
+  /* margin: 0 auto; */
+}
+
+.center{
+  display: flex;
+  justify-content: center;
+}
+
+.primg {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  gap: 10px;
+}
+
+.primg img {
+  width: 360px;
+}
+
+.products h1 {
+  margin-left: 40px;
+}
+
+.products h1 span {
+  color: green;
+}
+
+
+
+
+
+@media screen and (max-width:425px) {
+  .happy{
+    margin-left: 10px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width:715px) {
+  .reviewsec {
+    width: 90%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media screen and (max-width:610px) {
+  .tick {
+    width: 80%;
+    padding-left: 20px;
+    padding-right: 30px;
+  }
+}
+
+@media screen and (max-width:780px) {
+  .want {
+    flex-direction: column;
+  }
+
+  .want img {
+    margin: 0 auto;
+    width: 60%;
+  }
+}
+
+@media screen and (max-width:660px) {
+  .products {
+    width: 100%;
+  }
+
+  .primg img {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width:580px) {
+  .primg {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width:550px) {
+  .tick {
+    width: 100%;
+    padding-left: 20px;
+  }
+}
+
+@media screen and (max-width:635px) {
+  .flexlogo {
+    flex-direction: column;
+  }
+
+  .logoinfo {
+    margin: 0 auto;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width:800px) {
+  .here {
+    display: none;
   }
 }
